--- a/graduate-work/assets/css/style.css
+++ b/graduate-work/assets/css/style.css
@@ -27,6 +27,26 @@ header {
     background-repeat: no-repeat;
 }
 
+.item-text{
+    position: relative;
+    z-index: 1;
+}
+.item-text:after{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -10px;/*テキストからの距離*/
+    width: 0%;/*初期状態では下線非表示*/
+    height: 2px;/*下線の高さ*/
+    background: orange;/*下線の色*/
+    z-index: -1;
+    transition: all 0.4s;/*アニメーション速度*/
+}
+
+.item-under:hover .item-text:after{
+    width: 100%;/*hover時に表示*/
+}
+
 .main-visual{
     height: 100vh;
     color: white;
@@ -52,7 +72,7 @@ header {
     text-align: center;
     font-size: 200%;
     margin-top: 100px;
-    margin-bottom: 25px;
+    margin-bottom: 30px;
 }
 
 .about-contents {
@@ -120,9 +140,6 @@ header {
     width: 100vw;
     background-color: #efefef;
     margin-top: 100px;
-}
-
-.service-contents {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -132,4 +149,172 @@ header {
 .service-title {
     font-size: 200%;
     font-weight: bold;
+}
+
+.service-description {
+    margin-top: 15px;
+}
+
+.service-bold {
+    font-weight: bold;
+}
+
+.service-box {
+    margin-top: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+
+.service-item {
+    border: #efefef 1px solid;
+    background-color: white;
+    height: 250px;
+    width: 300px;
+    text-align: center;
+    margin-left: 60px;
+    font-size: 18px;
+    padding-top: 20px;
+}
+
+.item-description{
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+.service-details {
+    text-decoration: none;
+    color: black;
+    border-bottom: 1px orange solid;
+    padding-bottom: 10px;
+    position: relative;
+    z-index: 1;
+}
+
+.news-contents {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 100px;
+    margin-bottom: 100px;
+}
+
+.news-title {
+    font-size: 200%;
+    font-weight: bold;
+}
+
+.news-description {
+    padding-bottom: 10px;
+    margin-top: 15px;
+}
+
+.news-row1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: baseline;
+    margin-top: 30px;
+}
+
+.orange {
+    color: orange;
+    font-style: italic;
+    font-weight: bold;
+}
+
+.news1 {
+    margin-bottom: 20px;
+}
+
+.news2 {
+    margin-bottom: 20px;
+}
+
+.news3 {
+    margin-bottom: 20px;
+}
+
+.news-row1 > .news1 > a {
+    text-decoration: none;
+    color: black;
+}
+
+.news-row1 > .news2 > a {
+    text-decoration: none;
+    color: black;
+}
+
+.news-row1 > .news3 > a {
+    text-decoration: none;
+    color: black;
+}
+
+
+.blog-contents {
+    background-image: url(../img/library.jpg);
+    height: 150px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.blog-contents > a{
+    text-decoration: none;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all  0.3s ease;
+}
+
+.blog-contents > a:hover {
+    background-color: white;
+    color: black;
+}
+
+.blog-link {
+    border: 1px white solid;
+    height: 70px;
+    width: 170px;
+}
+
+#footer {
+    background-color: #3a3a3a;
+    padding-bottom: 55px;
+}
+
+.footer-nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 30px;
+    padding-top: 50px;
+}
+
+.footer-nav > li > a {
+    color: white;
+    text-decoration: none;
+    margin-left: 30px;
+    font-size: 100%;
+}
+
+.footer-last {
+    font-size: 8px;
+    color: slategrey;
+    padding-top: 25px;
+    text-align: center;
 }
